--- a/classwork/Lecture1/template.yaml
+++ b/classwork/Lecture1/template.yaml
@@ -1,10 +1,22 @@
+AWSTemplateFormatVersion: '2010-09-09'
+Description: 'S3 Bucket with encryption and versioning enabled'
+
+Parameters:
+  MyBucketName:
+    Type: String
+    Description: The desired name for your S3 bucket.
+    AllowedPattern: "[a-z0-9.-]{3,63}"
+    ConstraintDescription: Must be a valid S3 bucket name.
+
 Resources:
   S3Bucket:
     Type: AWS::S3::Bucket
     Properties:
+      BucketName: !Ref MyBucketName
       BucketEncryption:
         ServerSideEncryptionConfiguration:
           - ServerSideEncryptionByDefault:
               SSEAlgorithm: AES256
       VersioningConfiguration:
         Status: Enabled
+        
